--- a/search-state/src/app/app.component.html
+++ b/search-state/src/app/app.component.html
@@ -1,13 +1,13 @@
 <input type="text" [(ngModel)]="searchQuery" placeholder="Şehir arayın" />
 <button (click)="search()">Ara</button>
-
-
-
 <ul>
   <li *ngFor="let city of filteredCities$ | async">
     {{ city.name }}
     <loading *ngIf="isLoading$ | async"></loading>
   </li>
 </ul>
+<div *ngIf="(filteredCities$ | async)?.length === 0">
+  Sonuç bulunamadı.
+</div>
 
 <router-outlet />
