--- a/search-state/src/app/core/layout/navbar/navbar.component.html
+++ b/search-state/src/app/core/layout/navbar/navbar.component.html
@@ -1,6 +1,4 @@
 <ul nz-menu nzMode="horizontal">
-    <li nz-menu-item [routerLink]="['/settings']" nzSelected>
-      Settings
-    </li>
-  </ul>
-  
+  <li nz-menu-item [routerLink]="['/']" nzSelected>Home</li>
+  <li nz-menu-item [routerLink]="['/settings']" nzSelected>Settings</li>
+</ul>
