feat: language state

--- a/search-state/src/app/core/layout/navbar/navbar.component.html
+++ b/search-state/src/app/core/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <ul nz-menu nzMode="horizontal">
-  <li nz-menu-item [routerLink]="['/']" nzSelected>{{'Home' | transloco}}</li>
-  <li nz-menu-item [routerLink]="['/settings']" nzSelected>{{'Settings' | transloco}}</li>
+  <li nz-menu-item [routerLink]="['/']" nzSelected>{{'home' | transloco}}</li>
+  <li nz-menu-item [routerLink]="['/settings']" nzSelected>{{'settings' | transloco}}</li>
 </ul>
