--- a/search-state/src/styles.scss
+++ b/search-state/src/styles.scss
@@ -2,10 +2,12 @@
 
 body {
   background-color: #ffffff;
-  color: #000000;
+  color: #2b2a2a;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
-
+button{
+  color: #2b2a2a;
+}
 body.dark-mode {
   background-color: #2b2a2a;
   color: #e0e0e0;
@@ -27,7 +29,15 @@ body.dark-mode {
   .ant-card-body {
     background: #2b2a2a;
   }
+  .ant-menu{
+    background: #2b2a2a;
+  }
+  .ant-menu-item {
+    font-size: 16px;
+    color: #ffffff;
+  }
 }
+
 .ant-card-body {
   background: #ffffff;
 }
